Added 2 more recipes to the webpage

--- a/recipes/grilled-sugar-pork-chops.html
+++ b/recipes/grilled-sugar-pork-chops.html
@@ -34,6 +34,8 @@
         <li>Brush grate lightly with oil before placing pork chops on the grill. Cook over hot coals for 10 to 12 minutes, turning once. Brush with sauce just before removing chops from grill. Server with remaining sauce.</li>
     </ol>
 
+    <h4><a href="/home/soniikz/repos/odin-recipes/index.html">Return to homepage</a> </h4>
+
 
 </body>
 </html>
