--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/grilled-sugar-pork-chops.html">Grilled Sugar Brown Pork Chops</a>
-
+    <ul>
+    <li><a href="./recipes/grilled-sugar-pork-chops.html">Grilled Sugar Brown Pork Chops</a></li>
+    <li><a href="./recipes/traditional-mexican-guacamole.html">Traditional Mexican Guacamole</a></li>
+    <li><a href="./recipes/classic-waffles.html">Classic Waffles</a></li>
+    </ul>
 </body>
 </html>
